# sero.rs-operator

./: .dockerignore  Cargo.toml  Dockerfile  readme.md
chart/: Chart.yaml  values.yaml
chart/templates/: _helpers.tpl  configmap.yml  deployment.yaml  rbac.yml
src/: main.rs  operator_config.rs  sero_config.rs
src/api/: annotation.rs  mod.rs  namespace.rs
