[package]
name = "sero-operator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
config = "0.13.3"
k8s-openapi = { version = "0.17.0", features = ["v1_26"] }
kube = { version = "0.80", features = ["runtime", "derive", "client"] }
serde = { version = "1.0.155", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3.27"
thiserror = "1.0.24"
